--- a/final_project/css/fp_siteplan_style.css
+++ b/final_project/css/fp_siteplan_style.css
@@ -1,6 +1,6 @@
 body {
     
-    color:  #001524;
+    color:  #011936;
     
   }
 
@@ -21,12 +21,12 @@ main{
     font-size: xx-large;
 }
 .color1{color: #15616d;}
-.color2{color: #368f8b}
-.color3{color: #ff7d00}
+.color2{color: #c2eabd}
+.color3{color: #ff8600}
 .color4{color:#78290f}
-.accent1{color:#b61421}/*#e63946*/
+.accent1{color:#b61421}
 .accent2{color:rgb(191, 191, 212)}
-.accent3{color:#5f0f40}
-.bkgrnd{color:rgb(218, 218, 240); background-color: lightgray;}
+.accent3{color:#0a0188}
+.bkgrnd{color:#011936; background-color: lightgray;}
 
 
